@@ -23,7 +23,6 @@
 #define COD_DLL_IMPORT DLL_EXPORT
 #endif /* _LOGGER_C_ */
 
-COD_DLL_IMPORT void query_codepages(void);
 COD_DLL_IMPORT char* query_codepage(void);
 COD_DLL_IMPORT void set_codepage(char *name);
 COD_DLL_IMPORT unsigned char host_to_guest (unsigned char byte);
